Cambio en title de la web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Página de ejemplo del MOOC de LINUX - UPM.">
+    <meta name="description" content="CV y portfolio Ivan Valero Sanchez"
     <meta name="author" content="Ivan Valero Sanchez">
 
     <title>Ivan Valero Sánchez</title>
